--- a/package.json
+++ b/package.json
@@ -16,7 +16,22 @@
     "react-redux": "^8.0.2",
     "react-scripts": "5.0.1",
     "typescript": "^4.8.2",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "@emotion/react": "^11.10.0",
+    "@emotion/styled": "^11.10.0",
+    "@mui/icons-material": "^5.10.2",
+    "@mui/material": "^5.10.2",
+    "axios": "^0.27.2",
+    "dayjs": "^1.11.5",
+    "events": "^3.3.0",
+    "react-hot-toast": "^2.3.0",
+    "react-router-dom": "^6.3.0",
+    "redux": "^4.2.0",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.1",
+    "simple-peer": "^9.11.1",
+    "socket.io-client": "^4.5.1",
+    "@types/simple-peer": "^9.11.5"
   },
   "scripts": {
     "start": "react-scripts start",
